# demo-lightning-app

./: README.md  project_context_documentation.md
.claude/: settings.local.json
.cursor/: mcp.json
backend/: .env  .env.example  Cargo.toml  Dockerfile  TESTING.md
backend/migrations/: 001_initial.sql
backend/scripts/: run_tests.sh
backend/src/: config.rs  crypto.rs  error.rs  lib.rs  main.rs  types.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/gateway/: addresses.rs  assets.rs  burn.rs  channels.rs  events.rs  health.rs  info.rs  mailbox.rs  mod.rs  rfq.rs  routes.rs  stop.rs  wallet.rs
backend/src/storage/: database.rs
backend/src/taproot/: client.rs
lightning-wallet-app/: package-lock.json  package.json
lightning-wallet-app/app/(tabs)/: _layout.tsx  assets.tsx  history.tsx  index.tsx  settings.tsx  wallet.tsx
lightning-wallet-app/hooks/: useAssets.ts  useLNC.ts
lightning-wallet-app/services/: LNCService.ts  TaprootService.ts
